# ScrapeAI

./: README.md  examples.ipynb  pyproject.toml
example_collection/: c.txt  d.txt
src/scrapeai/: __init__.py  client.py  file.py  folder.py
